--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -66,7 +66,7 @@ jobs:
         COGNITO_ACCESS_KEY: ${{ secrets.COGNITO_ACCESS_KEY }}
     steps:
       - name: Run Tests With Backend Mocking
-        run: pytest --move=release
+        run: pytest --mode=release
         working-directory: /opt/HomeUniteUs/api
   test-app-mock-backend:
     runs-on: ubuntu-latest
