--- a/.github/workflows/build-deploy-ec2.yml
+++ b/.github/workflows/build-deploy-ec2.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
-          cache: 'pip'
+          python-version: "3.10"
+          cache: "pip"
       - name: Upgrade pip
         run: python -m pip install --upgrade pip
       - name: Build API Deployment Package
@@ -51,12 +51,12 @@ jobs:
         shell: bash
         working-directory: ./app
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: "16.x"
-          cache: 'npm'
+          node-version: 20
+          cache: "npm"
           cache-dependency-path: app/package-lock.json
       - name: Run npm CI
         run: npm ci
