--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -19,7 +22,9 @@
     "type-check": "npx tsc --noEmit",
     "prepare": "cd .. && husky install app/.husky",
     "pre-commit": "lint-staged",
-    "generate": "npx @rtk-query/codegen-openapi openapi-config.ts"
+    "generate": "npx @rtk-query/codegen-openapi openapi-config.ts",
+    "check-node-version": "node check-node-version.mjs",
+    "preinstall": "npm run check-node-version"
   },
   "author": "",
   "license": "ISC",
@@ -67,6 +72,7 @@
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "msw": "^2.2.3",
+    "semver": "^7.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vite": "^5.2.8",
