--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -6,7 +6,7 @@
     "lib": ["es6", "DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
     "skipLibCheck": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
@@ -24,6 +24,6 @@
       "@testing-library/cypress"
     ]
   },
-  "include": ["src", "*.ts"],
+  "include": ["src", "*.ts", "check-node-version.mjs"],
   "references": [{"path": "./tsconfig.node.json"}]
 }
