--- a/api/requirements-dev.txt
+++ b/api/requirements-dev.txt
@@ -163,6 +163,8 @@ pyasn1==0.5.1
     #   rsa
 pycparser==2.21
     # via cffi
+pyjwt==2.8.0
+    # via pyjwt
 pyproject-api==1.5.4
     # via tox
 pyproject-hooks==1.0.0
