--- a/api/openapi_server/openapi/paths/auth/authConfirm.yaml
+++ b/api/openapi_server/openapi/paths/auth/authConfirm.yaml
@@ -11,3 +11,30 @@ get:
   tags:
     - auth
   x-openapi-router-controller: openapi_server.controllers.auth_controller
+post:
+  description: Confirm or deny verification of users email
+  operationId: confirm_sign_up_v2
+  requestBody:
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            email:
+              type: string
+              format: email
+            code:
+              type: string
+          required:
+            - email
+            - code
+  responses:
+    "200":
+      content:
+        application/json:
+          schema:
+            $ref: "../../openapi.yaml#/components/schemas/ApiResponse"
+      description: successful operation
+  tags:
+    - auth
+  x-openapi-router-controller: openapi_server.controllers.auth_controller
