--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "engines": {
-    "node": ">=20.0.0"
+    "node": ">=20.0.0 <21"
   },
   "scripts": {
     "dev": "vite",
