--- a/app/package.json
+++ b/app/package.json
@@ -66,12 +66,13 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.13.3",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^8.0.1",
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "msw": "^2.2.3",
+    "prettier": "^3.2.5",
     "semver": "^7.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
