--- a/api/openapi_server/openapi/paths/auth/authNewPassword.yaml
+++ b/api/openapi_server/openapi/paths/auth/authNewPassword.yaml
@@ -1,6 +1,6 @@
 post:
   description: Removes auto generated password and replaces with user assigned password. Used for account setup.
-  operationId: initial_sign_in_reset_password
+  operationId: new_password
   requestBody:
     content:
       application/json:
