--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^6.15.0",
+    "@mui/x-date-pickers": "^7.5.1",
     "@reduxjs/toolkit": "^1.8.3",
     "date-fns": "^2.30.0",
     "formik": "^2.2.9",
