fix(api): JWT library added to pyproject.toml
Originally the `pyjwt` library was added directly to `requirements.txt`. When
adding dependencies, add them to `pyproject.toml` and the run the commands
documented in that file to regenerate `requirements.txt` and `requirements-dev.txt`.

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -99,6 +99,9 @@ dependencies = [
     "marshmallow==3.20.1",
     "marshmallow_sqlalchemy==1.0.0",
     "openapi-spec-validator==0.6.0",
+
+    # pyjwt is used to decode information contained in a JWT
+    "pyjwt==2.8.0",
 ]
 
 # This project defines dependencies for different "variants" of this project.
