use db data for coordinator dashboard, initial admin view

--- a/api/openapi_server/openapi/paths/users.yaml
+++ b/api/openapi_server/openapi/paths/users.yaml
@@ -9,7 +9,8 @@ delete:
       required: true
       description: The id of the user to delete
       schema:
-        type: string
+        format: int64
+        type: integer
   responses:
     "200":
       description: Null response
