--- a/api/openapi_server/openapi/schemas/_index.yaml
+++ b/api/openapi_server/openapi/schemas/_index.yaml
@@ -49,6 +49,13 @@ ServiceProviders:
   type: array
   items:
     $ref: '#/ServiceProviderWithId'
+DashboardDataSchema:
+  type: object
+  properties:
+    name:
+      type: string
+  required:
+    - name
 RoleSchema:
   type: object
   properties:
