fastapi-migration: Organize by workflow sections
This commit is part of the migration from connexion to FastAPI.
The commit contains a directory structure based on workflow responsibilities.

Tests still need to be updated along with code refactoring.
Files have been moved to their respective areas of responsibilities but have not
been refactored to work within.

--- a/api-v2/tox.ini
+++ b/api-v2/tox.ini
@@ -11,7 +11,7 @@ allowlist_externals = poetry
 commands_pre =
     poetry install
 commands =
-    poetry run pytest {tty:--color=yes} {posargs:tests} --cov=app --mode=debug
+    poetry run pytest {tty:--color=yes} {posargs:tests} --cov=app #--mode=debug
 
 [testenv:releasetest]
 description = run tests without mocking using pytest
