add incubator role

--- a/.github/workflows/deploy-aws-full.yml
+++ b/.github/workflows/deploy-aws-full.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v4
       - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v3
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::058264103110:role/homeuniteus-tf-user
+          role-to-assume: arn:aws:iam::058264103110:role/gha-incubator
           role-session-name: hackforlarolesession
           aws-region: ${{ env.AWS_REGION }}
       - name:  initialize terraform
