fastapi-migration: Added auth adapters

--- a/api-v2/pyproject.toml
+++ b/api-v2/pyproject.toml
@@ -36,7 +36,7 @@ boto3 = "^1.35.13"
 pydantic-settings = "^2.4.0"
 
 # email-validator validates e-mail addresses. It is used with Pydantic to validates
-# an e-mail address in Pydantic schemas.
+# an e-mail address
 email-validator = "^2.2.0"
 
 # pyjwt is used to decode information contained in a JSON Web Token
