--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: postgres
@@ -13,25 +11,41 @@ services:
       - POSTGRES_PORT=5432
     expose:
       - 5432
-  api:
+  motoserver:
+    image: motoserver/moto:latest
+    ports:
+      - "3000:3000"
+    environment:
+      - MOTO_PORT=3000 # set moto listener port with env var
+  backend:
     build:
-      context: ./api
+      context: ./backend
     volumes:
       - ./api:/usr/src/app
     ports:
-      - "8080:8080"
+      - "8000:8000"
     environment:
+      - COGNITO_CLIENT_ID=testing
+      - COGNITO_CLIENT_SECRET=testing
+      - COGNITO_REGION=us-east-1
+      - COGNITO_REDIRECT_URI=http://localhost:4040/signin
+      - COGNITO_USER_POOL_ID=testing
+      - COGNITO_ACCESS_ID=testing
+      - COGNITO_ACCESS_KEY=testing
+      - COGNITO_ENDPOINT_URL=http://127.0.0.1:3000
+      - ROOT_URL=http://localhost:4040
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/huu
     links:
       - db
     depends_on:
       - db
-  app:
+      - motoserver
+  frontend:
     build:
-      context: ./app
+      context: ./frontend
     ports:
       - "4040:80"
     depends_on:
-      - api
+      - backend
 volumes:
   db-data: {}
