Update run tests v1 github action frontend cache path
Updates the npm cache dependency path using the updated directory name.

--- a/.github/workflows/run-tests-v1.yml
+++ b/.github/workflows/run-tests-v1.yml
@@ -52,10 +52,10 @@ jobs:
         with:
           node-version: 20
           cache: "npm"
-          cache-dependency-path: app/package-lock.json
+          cache-dependency-path: frontend/package-lock.json
       - name: Run npm CI
         run: npm ci
-      - name: Test app
+      - name: Test frontend
         run: npm run test -- --no-color --run
       - name: Run E2E tests
         uses: cypress-io/github-action@v5
