--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,19 +9,37 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_PORT=5432
-    expose:
-      - 5432
+    ports:
+      - "5432:5432"
+  pgadmin:
+    image: dpage/pgadmin4
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=pgadmin@email.com
+      - PGADMIN_DEFAULT_PASSWORD=pgadmin
+      - PGADMIN_CONFIG_SERVER_MODE=False
+      - PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED=False
+    entrypoint: /bin/sh -c "chmod 600 /pgpass; /entrypoint.sh;"
+    user: root
+    configs:
+      - source: servers.json
+        target: /pgadmin4/servers.json
+      - source: pgpass
+        target: /pgpass
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
   motoserver:
     image: motoserver/moto:latest
     ports:
-      - "3000:3000"
+      - "5000:5000"
     environment:
-      - MOTO_PORT=3000 # set moto listener port with env var
+      - MOTO_PORT=5000
   backend:
     build:
       context: ./backend
-    volumes:
-      - ./api:/usr/src/app
     ports:
       - "8000:8000"
     environment:
@@ -32,20 +50,36 @@ services:
       - COGNITO_USER_POOL_ID=testing
       - COGNITO_ACCESS_ID=testing
       - COGNITO_ACCESS_KEY=testing
-      - COGNITO_ENDPOINT_URL=http://127.0.0.1:3000
+      - COGNITO_ENDPOINT_URL=http://motoserver:5000
       - ROOT_URL=http://localhost:4040
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/huu
+      - DATABASE_URL=postgresql+psycopg2://postgres:postgres@db:5432/huu
     links:
       - db
     depends_on:
       - db
       - motoserver
-  frontend:
-    build:
-      context: ./frontend
-    ports:
-      - "4040:80"
-    depends_on:
-      - backend
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #   ports:
+  #     - "4040:80"
+  #   depends_on:
+  #     - backend
 volumes:
   db-data: {}
+  pgadmin-data: {}
+configs:
+  pgpass:
+    content: db:5432:*:postgres:postgres
+  servers.json:
+    content: |
+      {"Servers": {"1": {
+        "Group": "Servers",
+        "Name": "Home Unite Us",
+        "Host": "db",
+        "Port": 5432,
+        "MaintenanceDB": "postgres",
+        "Username": "postgres",
+        "PassFile": "/pgpass",
+        "SSLMode": "prefer"
+      }}}
