fastapi-migration: Update backend .env example
The example has keys and values that can be used directly during development.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,10 @@
-COGNITO_CLIENT_ID=
-COGNITO_CLIENT_SECRET=
-COGNITO_REGION=
-COGNITO_REDIRECT_URI=http://localhost:34828/signin
-COGNITO_USER_POOL_ID=
-COGNITO_ACCESS_ID=
-COGNITO_ACCESS_KEY=
-ROOT_URL=http://localhost:34828
-DATABASE_URL=sqlite:///./homeuniteus.db
+COGNITO_CLIENT_ID=testing
+COGNITO_CLIENT_SECRET=testing
+COGNITO_REGION=us-east-1
+COGNITO_REDIRECT_URI=http://localhost:4040/signin
+COGNITO_USER_POOL_ID=testing
+COGNITO_ACCESS_ID=testing
+COGNITO_ACCESS_KEY=testing
+COGNITO_ENDPOINT_URL=http://127.0.0.1:5000
+ROOT_URL=http://localhost:4040
+DATABASE_URL=postgresql+psycopg2://postgres:postgres@127.0.0.1:5432/huu
