fastapi-migration: Remove commented frontend from docker compose
In this commit, the frontend will still fail to build due to test errors.
However, that is being fixed in parallel and this will ensure that the frontend
will be able to run in a container when it does get fixed.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,13 +58,11 @@ services:
     depends_on:
       - db
       - motoserver
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #   ports:
-  #     - "4040:80"
-  #   depends_on:
-  #     - backend
+  frontend:
+    build:
+      context: ./frontend
+    ports:
+      - "4040:80"
 volumes:
   db-data: {}
   pgadmin-data: {}
