fastapi-migration: Update backend entrypoint script
The backend entrypoint script has a check for "prod" as in production. In a
production environment, there would not be a need to create test users. So, this
commit moves towards the idea of having a production environment.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -43,5 +43,6 @@ COPY ./startup_scripts/create_groups_users.py /code/startup_scripts/create_group
 RUN chmod +x /code/startup_scripts/entrypoint.sh
 
 WORKDIR /code
-ENTRYPOINT ["/code/startup_scripts/entrypoint.sh", "prod"]
+ENTRYPOINT ["/code/startup_scripts/entrypoint.sh"]
+CMD []
 EXPOSE 8000
