fastapi-migration: Update alembic migrations
This commits removes the previous migration script. A new initial migration
script is added that creates all the tables and inserts data into the role
table.

The alembic migration tests have been removed until the tests can be configured
to accommodate this type of test.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     environment:
-      - PGADMIN_DEFAULT_EMAIL=pgadmin@email.com
+      - PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
       - PGADMIN_DEFAULT_PASSWORD=pgadmin
       - PGADMIN_CONFIG_SERVER_MODE=False
       - PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED=False
