Update port used by frontend for development to 4040
The port used during development and testing changed back to 4040.

--- a/.github/workflows/run-tests-v1.yml
+++ b/.github/workflows/run-tests-v1.yml
@@ -63,4 +63,4 @@ jobs:
           install: false
           start: npm run dev
           working-directory: ./frontend
-          wait-on: "http://[::1]:34828/"
+          wait-on: "http://localhost:4040/"
