--- a/.incubator/default.conf
+++ b/.incubator/default.conf
@@ -11,19 +11,24 @@ server {
     access_log /var/log/<HUU_ENVIRONMENT>.homeunite.us/nginx-access.log;
     error_log /var/log/<HUU_ENVIRONMENT>.homeunite.us/nginx-error.log;
 
-    location /api/ {
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-NginX-Proxy true;
-            proxy_pass http://127.0.0.1:8000/api/;
-            proxy_ssl_session_reuse off;
-            proxy_set_header Host $http_host;
-            proxy_cache_bypass $http_upgrade;
-            proxy_redirect off;
+    location / {
+        try_files $uri $uri/ /index.html =404;
     }
 
-    location / {
-            try_files $uri $uri/ =404;
+    location /img {
+        try_files $uri =404;
     }
+
+    location /api/ {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-NginX-Proxy true;
+        proxy_pass http://127.0.0.1:8000/api/;
+        proxy_ssl_session_reuse off;
+        proxy_set_header Host $http_host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_redirect off;
+    }
+
 }
