reverting changes to runtestv1.yml

--- a/.github/workflows/run-tests-v1.yml
+++ b/.github/workflows/run-tests-v1.yml
@@ -12,8 +12,6 @@ jobs:
       run:
         shell: bash
         working-directory: ./backend
-    env:
-      PYTHONPATH: ./  
     steps:
       - uses: actions/checkout@main
         with:
@@ -28,24 +26,8 @@ jobs:
           cache: "poetry"
       - name: Install API Dependencies
         run: poetry install --with test
-      # New debugging step added here
-      - name: Debug environment
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Directory contents:"
-          ls -la
-          echo "Python path:"
-          poetry run python -c "import sys; print('\n'.join(sys.path))"
-          echo "Poetry environment info:"
-          poetry env info
-      # - name: Run tests
-      #run: poetry run pytest
-      # Modified test step to include PYTHONPATH
       - name: Run tests
-        run: |
-          export PYTHONPATH=$PYTHONPATH:$(pwd) 
-          poetry run pytest -v --capture=no
-
+        run: poetry run pytest
   test-frontend:
     runs-on: ubuntu-latest
     defaults:
