push image to incubator

--- a/.github/workflows/deploy-to-incubator.yml
+++ b/.github/workflows/deploy-to-incubator.yml
@@ -6,9 +6,7 @@ on:
         type: choice
         description: The AWS environment to deploy (dev/test/prod)
         options: 
-        - dev
-        - test
-        - prod
+        - qa
 permissions:
   id-token: write
   contents: read
@@ -18,43 +16,35 @@ jobs:
     steps:
       - name: Clone repo
         uses: actions/checkout@v4
+
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::035866691871:role/gha-incubator
-          role-session-name: ghaincubatorsession
+          role-to-assume: arn:aws:iam::035866691871:role/incubator-cicd-home-unite-us
+          role-session-name: incubator-cicd-people-depot
           aws-region: us-west-2
-      - name: Push Docker container to ECR
-        # env:
-        #   IMAGE_URL: ${{  }}
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build, tag, and push the image to Amazon ECR
+        id: build-push-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: home-unite-us-fullstack
+          IMAGE_TAG: ${{ inputs.target-host-environment }}
         run: |
-          docker push 
-      - name: Update ECS
-        # env:
-        #   IMAGE_URL: ${{  }}
-        run: |
-          ## TODO: this will free us from having to maintain the template ecs task defintion
-          ##   file in sync with its terraform equivalent in the incubator IAC repo
-          # aws ecs describe-task-definition --task-definition homeuniteus --output json \
-          #   | jq --arg IMAGE_URL "${IMAGE_URL}" '.taskDefinition | .containerDefinitions[0].image = $IMAGE_URL' \
-          #   > ./ecs-task-definition.json
+          docker build -f ./.incubator/app.Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-          # populate and load the template file, by replacing the templated value(s) and storing output in a 
-          #   local env var
-          ECS_TASK_DEFINITION=$( sed "s/__IMAGE_URL__/${IMAGE_URL}/g" < ./.incubator/ecs-taskdef-template.json )
-
-          # register the task definition with the updated docker image url, write output to both stdout and 
-          #   local json file
-          aws ecs register-task-definition --cli-input-json "${ECS_TASK_DEFINITION}" \
-            | tee ./ecs-taskdef-revision.json
-
-          # force a new deployment for the new task definition we just registered
-          aws ecs update-service \
-            --cluster incubator-prod \
-            --service homeuniteus \
-            --task-definiton homeuniteus \
-            --force-new-deployment
-
+      # - name: Redeploy image in ECS
+      #   id: redeploy-service
+      #   env:
+      #     CLUSTER_NAME: incubator-prod
+      #     SERVICE_NAME: home-unite-us-fullstack-${{ inputs.target-host-environment }}
+      #   run: |
+      #     aws ecs update-service --force-new-deployment --service $SERVICE_NAME --cluster $CLUSTER_NAME
 
 
 
