--- a/.github/workflows/deploy-to-incubator.yml
+++ b/.github/workflows/deploy-to-incubator.yml
@@ -11,7 +11,7 @@ permissions:
   id-token: write
   contents: read
 jobs:
-  TerraformPlan:
+  Deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Clone repo
@@ -21,7 +21,7 @@ jobs:
         uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: arn:aws:iam::035866691871:role/incubator-cicd-home-unite-us
-          role-session-name: incubator-cicd-people-depot
+          role-session-name: incubator-cicd-home-unite-us
           aws-region: us-west-2
 
       - name: Login to Amazon ECR
